# fx2lp_usb_dev

./: .gitmodules  CMakeLists.txt  README.md
examples/: ep6_fifo.cpp  fifo_ep6.cpp  loader.cpp  sigrok.cpp
examples/qt_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/qt_gui/include/QCPWrapper/: QCPSubWindow.h
firmware/: CMakeLists.txt
firmware/examples/: fifo_ep6.c  gpif_ep6.c  gpio_helper.h  led.c  timer0.c
firmware/fx2lafw-cypress-fx2/: dscr.lst  dscr.rel  dscr.rst  dscr.sym  fx2lafw-cypress-fx2.ihx  fx2lafw-cypress-fx2.lk  fx2lafw-cypress-fx2.map  fx2lafw-cypress-fx2.mem
firmwares/: endpoint.ihx  fifo_ep6.ihx  fifo_ep6_ports_bd.ihx  led.ihx  port_b_fifo_ep6.ihx  ports.ihx  portsABD.ihx  serial.ihx
include/FX2/: FX2.h
